Updating the tour layout

--- a/_layouts/tour.html
+++ b/_layouts/tour.html
@@ -9,27 +9,25 @@ layout: default
 
 {% assign count=0 %}
 
-{% for route in site.routes %}
-{% if route.origin == page.origin %}
-    {% for route2 in site.routes %}
-        {% if route2.destination == page.destination and route2.origin == route.destination %}
+{% assign rstart=site.routes | where:'origin', page.origin %}
+{% assign rfinal=site.routes |where: 'destination', page.destination %}
+{% for route in rstart %}
+    {% assign r2=rfinal|where: "origin", route.destination %}
+    {% for route2 in r2 %}
         {% assign count=count | plus: 1 %}        
   <h2>Method {{count}}</h2>
     <h3>Step 1</h3>
         {{route.content}}
     <h3>Step 2</h3>
         {{route2.content}}
-        {% endif %}
   {% endfor %}
-  {% endif %}
 {% endfor %}
 
-{% for route in site.routes %}
-{% if route.origin == page.origin %}
-    {% for route2 in site.routes %}
-        {% if route2.origin == route.destination %}
-        {% for route3 in site.routes %}
-        {% if route3.origin == route2.destination and route3.destination == page.destination %}
+{% for route in rstart %}
+    {% assign r2 = site.routes | where: 'origin', route.destination %}
+    {% for route2 in r2 %}
+        {% assign r3 = site.routes | where: 'origin', route2.destination | where: 'destination', page.destination %}
+        {% for route3 in r3 %}
         {% assign count=count | plus: 1 %}        
   <h2>Method {{count}}</h2>
     <h3>Step 1</h3>
@@ -38,9 +36,6 @@ layout: default
         {{route2.content}}
     <h3>Step 3</h3>
         {{route3.content}}
-        {% endif %}
         {% endfor %}
-        {% endif %}
   {% endfor %}
-  {% endif %}
 {% endfor %}
