Updating the route from ICN

--- a/_layouts/tour.html
+++ b/_layouts/tour.html
@@ -3,13 +3,19 @@ layout: default
 ---
 <h1>{{page.title}}</h1>
 
-{% assign endlocation=site.destinations | where: 'slug', page.destination | first  %}
-
-{{ endlocation.content}}
-
+{% capture allcontent %}
 {% assign count=0 %}
 {% assign startlocation=site.origins | where: 'slug', page.origin | first  %}
 <!-- {% assign endlocation=site.destination | where: 'slug', page.destination %} -->
+
+
+{% assign rstart=site.routes | where:'origin', page.origin |where: 'destination', page.destination %}
+{% for route in rstart %}
+{% assign count=count | plus: 1 %}        
+<h2 id="method{{count}}">Method {{count}}. {{route.title}}</h2>
+<h3 id="method{{count}}-1">Step 1 @ {{startlocation.title}}</h3>
+    {{route.content}}
+{% endfor  %}
 
 {% assign rstart=site.routes | where:'origin', page.origin %}
 {% assign rfinal=site.routes |where: 'destination', page.destination %}
@@ -19,10 +25,10 @@ layout: default
         {% assign count=count | plus: 1 %}        
         {% assign transit=site.origins | where: 'slug', route2.origin | first  %}
 
-  <h2>Method {{count}}. {{route.title}}</h2>
-    <h3>Step 1 @ {{startlocation.title}}</h3>
+  <h2 id="method{{count}}">Method {{count}}. {{route.title}}</h2>
+    <h3 id="method{{count}}-1">Step 1 @ {{startlocation.title}}</h3>
         {{route.content}}
-    <h3>Step 2 @ {{transit.title}}</h3>
+    <h3 id="method{{count}}-2">Step 2 @ {{transit.title}}</h3>
         {{route2.content}}
   {% endfor %}
 {% endfor %}
@@ -35,18 +41,26 @@ layout: default
         {% assign count=count | plus: 1 %}  
         {% assign transit=site.origins | where: 'slug', route2.origin | first  %}
         {% assign transit2=site.origins | where: 'slug', route3.origin | first  %}     
-  <h2>Method {{count}}. {{route.title}}</h2>
-    <h3>Step 1 @ {{startlocation.title}}</h3>
+  <h2 id="method{{count}}">Method {{count}}. {{route.title}}</h2>
+    <h3 id="method{{count}}-1">Step 1 @ {{startlocation.title}}</h3>
         {{route.content}}
-    <h3>Step 2 @ {{transit.title}}</h3>
+    <h3 id="method{{count}}-2">Step 2 @ {{transit.title}}</h3>
         {{route2.content}}
-    <h3>Step 3 @ {{transit2.title}}</h3>
+    <h3 id="method{{count}}-3">Step 3 @ {{transit2.title}}</h3>
         {{route3.content}}
         {% endfor %}
   {% endfor %}
 {% endfor %}
-
 <hr/>
-<h2>General advice</h2>
+{% assign endlocation=site.destinations | where: 'slug', page.destination | first  %}
+<h2 id="destination">Your destination: {{endlocation.title}}</h2>
+
+{{ endlocation.content}}
+<hr/>
+<h2 id="advice">General advice</h2>
+{%endcapture%}
+{% include toc.html html=allcontent %}
+{{allcontent}}
+
 {%capture my_include%}{% include tips.md %}{% endcapture %}
 {{my_include|markdownify}}
