--- a/_layouts/tour.html
+++ b/_layouts/tour.html
@@ -51,6 +51,10 @@ layout: default
         {% endfor %}
   {% endfor %}
 {% endfor %}
+
+{% if count==0 %}
+<h2>Travel Instruction: Under construction</h1>
+{% endif %}
 <hr/>
 {% assign endlocation=site.destinations | where: 'slug', page.destination | first  %}
 <h2 id="destination">Your destination: {{endlocation.title}}</h2>
