--- a/_layouts/tour.html
+++ b/_layouts/tour.html
@@ -6,7 +6,7 @@ layout: default
     {% if page.prev %}
     <a href="../{{page.prev}}/"><button class="btn btn-blue">← Prev</button></a>
     {% endif %}
-    <a href="../"><button class="btn">Up</button></a>
+    <a href="../"><button class="btn btn-blue">Up</button></a>
     {% if page.next %}
     <a href="../{{page.next}}/"><button class="btn btn-blue">Next →</button></a>
     {% endif %}
