--- a/_layouts/origin.html
+++ b/_layouts/origin.html
@@ -60,7 +60,8 @@ var redIcon = new L.Icon({
     {% if dest.lat and dest.long %}
         {% if dest.slug== "dimag" %}
         L.marker([{{ dest.lat }}, {{ dest.long }}],{icon:redIcon}).addTo(map)
-        .bindPopup('<b><a href="{{dest.slug}}/">{{ dest.title }}</a></b>');
+        .bindPopup('<b><a href="{{dest.slug}}/">{{ dest.title }}</a></b>')
+        .openPopup();
         {%else%}
         L.marker([{{ dest.lat }}, {{ dest.long }}]).addTo(map)
         .bindPopup('<b><a href="{{dest.slug}}/">{{ dest.title }}</a></b>');
