--- a/_layouts/tour.html
+++ b/_layouts/tour.html
@@ -15,24 +15,31 @@ layout: default
 {% assign endlocation=site.destinations | where: 'slug', page.destination | first  %}
 <h2 id="destination">{{endlocation.title}}</h2>
 
+<a href="https://www.google.com/maps/search/?api=1&query={{endlocation.lat}}%2C{{endlocation.long}}" target="maps">Google Maps</a>
+
 {{ endlocation.content}}
 <hr/>
 
 {% capture allcontent %}
 
-
-
 {% assign count=0 %}
 {% assign startlocation=site.origins | where: 'slug', page.origin | first  %}
-<!-- {% assign endlocation=site.destination | where: 'slug', page.destination %} -->
 
-
+{% assign colors = ",red,blue,green,black,yellow,magenta,purple" | split: "," %}
+{% assign tpoints = "" %}"
 {% assign rstart=site.routes | where:'origin', page.origin |where: 'destination', page.destination %}
 {% for route in rstart %}
 {% assign count=count | plus: 1 %}        
 <h2 id="method{{count}}"><span class="label label-yellow">Method {{count}}</span> {{route.title}}</h2>
 <h3 id="method{{count}}-1"><span class="label">Step 1</span>  {{startlocation.title}}</h3>
     {{route.content}}
+    <script language="javascript">
+        L.polyline([
+            [{{startlocation.lat}}, {{startlocation.long}}],
+            [{{endlocation.lat}}, {{endlocation.long}}]],
+            {color: '{{colors[count]}}'}
+        ).addTo(map);
+    </script>   
 {% endfor  %}
 
 {% assign rstart=site.routes | where:'origin', page.origin %}
@@ -48,6 +55,15 @@ layout: default
         {{route.content}}
     <h3 id="method{{count}}-2"><span class="label">Step 2</span> {{transit.title}}</h3>
         {{route2.content}}
+        <script language="javascript">
+            L.polyline([
+                [{{startlocation.lat}}, {{startlocation.long}}],
+                [{{transit.lat}}, {{transit.long}}],
+                [{{endlocation.lat}}, {{endlocation.long}}]],
+                {color: '{{colors[count]}}'}
+            ).addTo(map);
+        </script>
+        {% assign tpoints = tpoints | append: transit.slug | append: "," %}
   {% endfor %}
 {% endfor %}
 
@@ -66,6 +82,17 @@ layout: default
         {{route2.content}}
     <h3 id="method{{count}}-3"><span class="label">Step 3</span> {{transit2.title}}</h3>
         {{route3.content}}
+        <script language="javascript">
+            L.polyline([
+                [{{startlocation.lat}}, {{startlocation.long}}],
+                [{{transit.lat}}, {{transit.long}}],
+                [{{transit2.lat}}, {{transit2.long}}],
+                [{{endlocation.lat}}, {{endlocation.long}}]],
+                {color: '{{colors[count]}}'}
+            ).addTo(map);
+        </script> 
+        {% assign tpoints = tpoints | append: transit.slug |append:"," %}
+        {% assign tpoints = tpoints | append: transit2.slug|append:"," %}
         {% endfor %}
   {% endfor %}
 {% endfor %}
@@ -77,8 +104,64 @@ layout: default
 
 <h2 id="advice">General advice</h2>
 {%endcapture%}
+{%assign transitpoints=tpoints|split:","|uniq%}
 {% include toc.html html=allcontent %}
+<div id="map"></div>
+<script language="javascript">
+        var greenIcon = new L.Icon({
+  iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png',
+  shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
+  iconSize: [25, 41],
+  iconAnchor: [12, 41],
+  popupAnchor: [1, -34],
+  shadowSize: [41, 41]
+});
+var redIcon = new L.Icon({
+  iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png',
+  shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
+  iconSize: [25, 41],
+  iconAnchor: [12, 41],
+  popupAnchor: [1, -34],
+  shadowSize: [41, 41]
+});
+    var map = L.map('map').setView([36.376419,127.385482], 7);
+    L.tileLayer('https://{s}.tile.openstreetmap.de/{z}/{x}/{y}.png', {
+        maxZoom: 19,
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+    var bounds= new L.latLngBounds();
+    {% for dest in site.destinations %}
+    {% if dest.lat and dest.long %}
+        {% if dest.slug== "dimag" %}
+            L.marker([{{ dest.lat }}, {{ dest.long }}],{icon:redIcon}).addTo(map)
+            .bindPopup('<b>{{ dest.title }}</b>');
+            bounds.extend([{{ dest.lat }}, {{ dest.long }}]);
+        {%elsif dest.slug== page.destination%}
+                L.marker([{{ dest.lat }}, {{ dest.long }}],{icon:redIcon}).addTo(map)
+                .bindPopup('<b>{{ dest.title }}</b>');
+                bounds.extend([{{ dest.lat }}, {{ dest.long }}]);
+        {%endif%}
+    {% endif %}
+    {% endfor %}
+    {% for dest in site.origins %}
+    {% if dest.lat and dest.long %}
+        {%if dest.slug==page.origin %}        
+            L.marker([{{ dest.lat }}, {{ dest.long }}]).addTo(map)
+            .bindPopup('<b><a href="/{{dest.slug}}/">{{ dest.title }}</a></b>');
+            bounds.extend([{{ dest.lat }}, {{ dest.long }}]);
+
+        {%elsif transitpoints contains dest.slug %}
+            L.marker([{{ dest.lat }}, {{ dest.long }}],
+                {icon:greenIcon}).addTo(map)
+            .bindPopup('<b>{{ dest.title }}</b>');
+            bounds.extend([{{ dest.lat }}, {{ dest.long }}]);
+        {%endif%}
+    {% endif %}
+    {% endfor %}
+    map.fitBounds(bounds);
+</script>
 {{allcontent}}
 
 {%capture my_include%}{% include tips.md %}{% endcapture %}
 {{my_include|markdownify}}
+
