--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,1 +1,6 @@
 #map { height: 500px; }
+#map2 { height: 700px; }
+.mi { border-radius: 50px; width: 20px !important; height: 20px !important; background: red; 
+    -moz-border-radius: 50px; -webkit-border-radius: 50px;color:white;
+    opacity:0.5; font-size:15px !important; font-weight: bold;text-align:center;display:inline-block;}
+
